# simple-todo

./: Cargo.toml  README.md
src/: main.rs  todo.rs
src/todo/: app.rs  prompts.rs  structs.rs  todo.rs  utils.rs
