[package]
name = "simple-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22" 
colorize = "0.1.0"
eyre = "0.6.8"
fuzzy-matcher = "0.3.7"
home = "0.5.4"
requestty = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"]}
